cmake_minimum_required(VERSION 3.22)
project(Kursach)

set(CMAKE_CXX_STANDARD 17)

add_executable(Kursach main.cpp
        collection.h
        comparer.h
        database.h
        pool.h
        scheme.h
        value.h
        allocators/allocator.h
        allocators/allocator_buddies_system.h
        allocators/allocator_buddies_system.cpp
        allocators/allocator_guardant.h
        allocators/allocator_guardant.cpp
        allocators/allocator_types.h
        allocators/allocator_with_fit_mode.h
        logger/logger.h
        logger/logger_builder.h
        logger/logger_guardant.h
        logger/logger.cpp
        logger/logger_builder.cpp
        logger/logger_guardant.cpp
        include/associative_container.h
        include/b_tree.h
        include/search_tree.h
        allocators/typename_holder.h
        allocators/allocator_test_utils.h
        allocators/allocator_test_utils.cpp
        logger/client_logger.cpp
        logger/client_logger.h
        logger/client_logger_builder.cpp
        logger/client_logger_builder.h
        second_key_comparer.h
        allocators/allocator_sorted_list.cpp
        allocators/allocator_sorted_list.h
        allocators/allocater_boundary_tags.cpp
        allocators/allocater_boundary_tags.h
        allocators/allocator_global_heap.cpp
        allocators/allocator_global_heap.h
        allocators/allocator_red_black_tree.cpp
        allocators/allocator_red_black_tree.h
        commands/command.h
        commands/command_add_pool.h
        request_handler/handler.h
        request_handler/request_handler_with_command.h
        request_handler/request_handler_with_command_chain.h
        commands/command_add_scheme.h
        commands/comman_add_collection.h
        commands/command_add_value.h
        commands/command_delete_value.h
        commands/command_delete_scheme.h
        commands/command_delete_collection.h
        commands/command_delete_pool.h
        commands/command_find_value.h
        commands/command_update_value.h
        commands/command_read_set_value.h
        version_singleton.h
        flyweight/string_flyweight.h
        flyweight/string_flyweight_factory.h
        flyweight/string_flyweight_factory.h
        flyweight/string_flyweight.h
        flyweight/string_flyweight_factory.h
        persistence_singleton.h
        interface.h
        commands/command_find_value_in_time.h
)
